# TFG_Antonio_Mata

./: .gitignore  README.md
tfg/: CMakeLists.txt  sdkconfig
tfg/components/communication/: CMakeLists.txt  communication.c
tfg/components/communication/include/: communication.h  communication_secrets.h.example
tfg/components/config/: config.c
tfg/components/diagnostics/: CMakeLists.txt  diagnostics.c
tfg/components/diagnostics/include/: diagnostics.h
tfg/components/power_manager/: CMakeLists.txt  power_manager.c
tfg/components/power_manager/include/: power_manager.h
tfg/components/sensors/: CMakeLists.txt  sensors.c
tfg/components/sensors/include/: sensors.h
tfg/components/storage/: CMakeLists.txt  storage.c
tfg/components/storage/include/: storage.h
tfg/components/tasks/: CMakeLists.txt  tasks.c
tfg/components/tasks/include/: tasks.h
tfg/components/utils/: CMakeLists.txt  utils.c
tfg/components/utils/include/: utils.h
tfg/main/: CMakeLists.txt  main.c
tfg_telegraf_influx_grafana/: .env  docker-compose.yaml
tfg_telegraf_influx_grafana/telegraf/: telegraf.conf
